# lidarr-watchdog

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.claude/skills/run/: SKILL.md
.claude/skills/run/scripts/: screenshot.py  serve_demo.py
.github/workflows/: docker-publish.yml  tests.yml
src/lidarr_watchdog/: checker.py  config.py  history.py  lidarr_client.py  main.py  settings.py  watchdog.py  web.py
src/lidarr_watchdog/templates/: _event_table.html  base.html  blocklist.html  dashboard.html  login.html  settings.html
tests/: test_auth.py  test_blocklist_page.py  test_checker.py  test_config.py  test_history.py  test_lidarr_client.py  test_main.py  test_settings.py  test_watchdog.py  test_web.py
