[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lidarr-watchdog"
dynamic = ["version"]
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]

[project.scripts]
lidarr-watchdog = "lidarr_watchdog.main:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/lidarr_watchdog/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lidarr_watchdog"]

[dependency-groups]
dev = [
    "pytest",
    "responses",
    "httpx2",
]
